pine: update power profile according to los changes * https://github.com/LineageOS/android_frameworks_base/commit/3d422c3
Signed-off-by: dlwlrma123 <alexfinhart@gmail.com>
Signed-off-by: hsx02 <hsx02self@gmail.com>

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -87,5 +87,6 @@
         <value>26</value>
     </array>
     <item name="cpu.idle">9</item>
+    <item name="cpu.suspend">4.81</item>
     <item name="battery.capacity">4000</item>
 </device>
